objects/redwing__Quiz__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Delete_Responses_On_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Delete quiz response records after quiz submission</inlineHelpText>
        <label>Delete Responses on Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Display_Progress_Bar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Progress Bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Display_Quiz_Navigator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Quiz Navigator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Display_Results_Summary__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Display a summary on quiz submission that shows correct/incorrect questions</inlineHelpText>
        <label>Display Response Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Display_Topics_Summary__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Display a summary on quiz submission that shows correct/incorrect topics</inlineHelpText>
        <label>Display Topics Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_Survey_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling Survey Mode prevents deleting responses on completion and scoring is disabled</inlineHelpText>
        <label>Survey Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Quizzes</relationshipLabel>
        <relationshipName>Quizzes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Max_Attempts__c</fullName>
        <inlineHelpText>Maximum number of attempts to reach the passing score</inlineHelpText>
        <label>Max Attempts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Passing_Score__c</fullName>
        <inlineHelpText>Number between 0 and 100 that will determine the minimum percentage of correct answers to get a passing score</inlineHelpText>
        <label>Passing Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Randomize_Question_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Randomize Question Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Randomize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Randomize Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Round_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Round Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Time_Limit__c</fullName>
        <inlineHelpText>Number of minutes to complete the evaluation</inlineHelpText>
        <label>Time Limit (mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Total_Questions__c</fullName>
        <label>Total Questions</label>
        <summarizedField>redwing__Question_Line__c.redwing__Total_Questions__c</summarizedField>
        <summaryForeignKey>redwing__Question_Line__c.redwing__Quiz__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Quiz</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__Learning__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quiz Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quizzes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>redwing__Checking_Positive_Number</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(redwing__Max_Attempts__c) &amp;&amp; redwing__Max_Attempts__c &lt; 1</errorConditionFormula>
        <errorDisplayField>redwing__Max_Attempts__c</errorDisplayField>
        <errorMessage>Number of attempts must be greater than zero</errorMessage>
    </validationRules>
</CustomObject>